# secret-vault-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: security-audit.yml  tests.yml
examples/: simple.rs
secret-value/: Cargo.toml  README.md
secret-value/examples/: simple.rs
secret-value/src/: base64_support.rs  bytes_support.rs  hex_support.rs  lib.rs  value.rs  value_proto.rs  value_serde.rs
secret-vault/: Cargo.toml
secret-vault/benches/: read_vault_bench.rs  ring_encrypted_vault.rs
secret-vault/examples/: ahash_snapshot.rs  auto_refresh_secret_manager_vault.rs  aws_secret_manager_vault.rs  files_source.rs  gcloud_secret_manager_vault.rs  gcp_secret_manager_vault.rs  hashmap_snapshot.rs  insecure_env_secret_vault.rs  kms_aws_secret_manager_vault.rs  kms_gcloud_secret_manager_vault.rs  kms_gcp_secret_manager_vault.rs  multiple_sources.rs  secret_gen_source.rs
secret-vault/src/: allocator.rs  common_types.rs  encryption.rs  errors.rs  lib.rs  locked_allocator.rs  multiple_sources.rs  prost_chrono.rs  ring_encryption.rs  ring_encryption_support.rs  secrets_source.rs  storage.rs  vault.rs  vault_auto_refresher.rs  vault_builder.rs  vault_snapshot.rs  vault_store.rs  vault_viewer.rs
secret-vault/src/aws/: aws_kms_encryption.rs  aws_secret_manager_source.rs  mod.rs
secret-vault/src/gcp/: gcloud_kms_encryption.rs  gcloud_secret_manager_source.rs  gcp_kms_encryption.rs  gcp_secret_manager_source.rs  mod.rs
secret-vault/src/simple_sources/: env_source.rs  files_source.rs  mock_source.rs  mod.rs  multiple_sources.rs  temp_secretgen_source.rs
secret-vault/src/snapshot/: ahash_snapshot.rs  hash_map_snapshot.rs  mod.rs  std_hash_snapshot.rs
src/: errors.rs  lib.rs
src/secret_value/: mod.rs  value.rs  value_serde.rs
