[package]
name = "secret-vault-value"
version = "0.2.4"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Library provides a simple implementation of a secure and serializable type of any kind of secrets"
homepage = "https://github.com/abdolence/secret-vault-rs"
repository = "https://github.com/abdolence/secret-vault-rs"
documentation = "https://docs.rs/secret-vault"
categories = ["cryptography"]
keywords = ["data-structures"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE", "../SECURITY.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "secret_vault_value"
path = "src/lib.rs"

[dependencies]
zeroize = { version = "1.5", features = ["std", "derive"] }
serde = { version = "1", features = ["derive"], optional = true }
prost = { version="0.10", optional = true}
prost-types = { version="0.10", optional = true}
bytes = { version="1", optional = true }

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
serde_json = { version = "1" }
proptest = "1.0"
tokio = "1.20"

[features]
default = []
serde = ["dep:serde"]
proto = ["dep:prost", "dep:prost-types"]
bytes = ["dep:bytes"]

[package.metadata.docs.rs]
all-features = true
