[package]
name = "secret-vault-value"
version = "0.3.7"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Library provides a simple implementation of a secure and serializable type to store and control secret/sensitive values"
homepage = "https://github.com/abdolence/secret-vault-rs"
repository = "https://github.com/abdolence/secret-vault-rs"
documentation = "https://docs.rs/secret-vault-value"
categories = ["cryptography"]
keywords = ["data-structures", "secret"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE", "../SECURITY.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "secret_vault_value"
path = "src/lib.rs"

[dependencies]
zeroize = { version = "1.6", features = ["std", "derive"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
prost = { version="0.11", optional = true}
prost-types = { version="0.11", optional = true}
bytes = { version="1", optional = true }
hex = { version="0.4", optional = true }
base64 = { version="0.21", optional = true }

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
proptest = "1.1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
proto = ["dep:prost", "dep:prost-types"]
bytes = ["dep:bytes"]
hex = ["dep:hex"]
base64 = ["dep:base64"]

[package.metadata.release]
tag-prefix=""

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["hex", "base64", "serde", "proto"]
